<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.6</version>
        <relativePath/>
    </parent>

    <groupId>com.smart.agent</groupId>
    <artifactId>smart-agent-framework</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>Smart Agent Framework</name>
    <description>A generic AI Agent framework with Supervisor/SubAgent pattern, RAG, MCP, and more.</description>

    <modules>
        <module>smart-agent-core</module>
        <module>smart-agent-start</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <agentscope.version>1.0.12</agentscope.version>
        <mybatis-plus.version>3.5.12</mybatis-plus.version>
        <druid.version>1.2.23</druid.version>
        <mysql.version>8.0.33</mysql.version>
        <dingtalk-stream.version>1.3.12</dingtalk-stream.version>
        <fastjson2.version>2.0.57</fastjson2.version>
        <jgit.version>7.1.0.202411261347-r</jgit.version>
        <springdoc.version>2.3.0</springdoc.version>
        <milvus.version>2.4.4</milvus.version>
        <mcp-sdk.version>0.17.0</mcp-sdk.version>
        <nacos-client.version>2.4.3</nacos-client.version>
        <lombok.version>1.18.46</lombok.version>
        <mockito.version>5.15.2</mockito.version>
        <byte-buddy.version>1.17.0</byte-buddy.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.smart.agent</groupId>
                <artifactId>smart-agent-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.agentscope</groupId>
                <artifactId>agentscope</artifactId>
                <version>${agentscope.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>2.18.2</version>
            </dependency>

            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-bom</artifactId>
                <version>${mybatis-plus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-3-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>

            <dependency>
                <groupId>com.dingtalk.open</groupId>
                <artifactId>dingtalk-stream</artifactId>
                <version>${dingtalk-stream.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jgit</groupId>
                <artifactId>org.eclipse.jgit</artifactId>
                <version>${jgit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>io.milvus</groupId>
                <artifactId>milvus-sdk-java</artifactId>
                <version>${milvus.version}</version>
            </dependency>

            <dependency>
                <groupId>io.modelcontextprotocol.sdk</groupId>
                <artifactId>mcp</artifactId>
                <version>${mcp-sdk.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba.nacos</groupId>
                <artifactId>nacos-client</artifactId>
                <version>${nacos-client.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <parameters>true</parameters>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.46</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
